# FedProt

./: .gitignore  02_fedProt_prototype_DIA.ipynb  README.md  pyproject.toml
FedProt/: README.md  client.py  clientDIA.py  config.yml  requirements.txt  serverDIA.py  states.py  utils.py
bacterial_data/: 01_data_preparation.ipynb
data/TMT_data/: 00_raw_data_preprocessing.ipynb  01_PG_group_merging.ipynb  01_data_preparation.ipynb  02_alphapept_approach.ipynb  02_eda_plots.ipynb  02_peptides_merging.ipynb  02_peptides_merging_network.ipynb  03_merging_checks.ipynb  03_need_sorting_check.ipynb  04_intersection_reviewed.ipynb  Metadata_CosyBio.tsv
data/bacterial_data/: 00_raw_data_preprocessing.md  01_data_preparation.ipynb  01_imbalanced_dataset.ipynb  02_Centralized_R_script.R  02_QC_samples.ipynb
data/simulated_data/: README.md
evaluation/: README.md
evaluation/TMT_data/: 01_central_run_v1.ipynb  01_central_run_v2.ipynb  01_run_deqms.ipynb  02_run_FedProt.ipynb  03_evaluation.ipynb  03_prot_intersection.ipynb  03_run_FedProt.ipynb  04_evaluation.ipynb  Proteomics_Normalization.Rmd  analysed_proteins.json  analysed_proteins_LABS.json  functions.ipynb
evaluation/aggregated_eval/: features_intersection.ipynb
evaluation/bacterial/: 01_run_deqms.ipynb  02_prot_intersection.ipynb  02_run_FedProt.ipynb  03_prot_intersection.ipynb  03_run_FedProt.ipynb  Evaluation.ipynb  (+6 more)
fedprot_test/: .gitignore  README.md  config.yml  main.py  myapp.py  requirements.txt  states.py  utils.py
test_fedprot/: Dockerfile  client.py  config.yml  requirements.txt  states.py  utils.py
(+248 files in other folders)
