[tool.poetry]
name = "FedProt"
version = "0.1.0"
description = "Federated differential protein expression analysis."
repository = "https://github.com/Freddsle/FedProt/"
authors = ["Yuliya Burankova"]

[tool.poetry.dependencies]
python = ">3.10,<3.12"
featurecloud = ">0.0.28"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
